frontend/assets/hashi-ui.css
html {
  font-family: "Roboto", sans-serif;
  -webkit-font-smoothing: antialiased;
}

body {
  font-size: 15px;
  line-height: 24px;
  margin: 0;
  padding: 0;
  background: #f3f3f3;
}

body,
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}

a {
  text-decoration: none;
  color: #449b82;
}

a:hover {
  text-decoration: underline;
}

dl {
  margin-top: 0;
  margin-bottom: 20px;
}

dt {
  float: left;
  width: 200px;
  overflow: hidden;
  clear: left;
  text-align: right;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-weight: 500;
}

dl.metrics {
  text-align: center;
}

dl.metrics dt {
  width: 35%;
}

dl.metrics dd {
  margin-left: 20px;
}

dt:after {
  content: " : ";
}

dd {
  margin-left: 220px;
}

.content-file {
  height: 650px;
  overflow: auto;
  clear: both;
  white-space: pre;
  background: #f5f5f5;
  font-family: monospace;
  font-size: 90%;
  line-height: 1.5;
}

.content-file.small {
  height: auto;
  padding: 1em;
}

code {
  color: #c7254e;
  background-color: #f9f2f4;
  border-radius: 4px;
  padding: 2px 4px;
  font-size: 90%;
}

th {
  text-align: left;
  font-weight: 700;
}

.nomad-table-responsive {
  border: 0;
  width: 100%;
  margin-bottom: 15px;
  overflow-x: scroll;
  overflow-y: hidden;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  -webkit-overflow-scrolling: touch;
}

.breadcrumb:before {
  content: "\e7c3";
  font-family: "Material-Design-Icons";
}

.breadcrumb:before {
  content: "\E5CC";
  vertical-align: top;
  display: inline-block;
  font-family: "Material Icons";
  font-weight: normal;
  font-style: normal;
  font-size: 20px;
  margin: 0 5px 0 5px;
  -webkit-font-smoothing: antialiased;
}

.breadcrumb.no-icon:before {
  content: "";
}

.warning-bar {
  margin-top: 1em;
  padding: 1em;
  border-radius: 4px;
}
.warning-bar .material-icons {
  float: left;
  font-size: 12px;
}
.warning-bar div {
  display: inline;
  padding-left: 0.5em;
  color: white;
  clear: both;
}
.warning-bar a {
  color: white;
  text-decoration: underline;
}

.consul-logo {
  background: url("img/consul.png");
  background-repeat: no-repeat;
  background-position: center;
}

.consul-logo-small {
  background: url("img/consul-small.png");
  background-repeat: no-repeat;
  background-position: center;
}

.consul-logo-medium {
  background: url("img/consul-medium.png");
  background-repeat: no-repeat;
  background-position: center;
}

.nomad-logo {
  background: url("img/nomad.png");
  background-repeat: no-repeat;
  background-position: center;
}

